tools/tests/errors/surf_name_08.experr
name 'score' is not defined
